--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env:
     TZ: "Asia/Kolkata"
 
 task:
-  name: "Velocity-Kernel-Builder"
+  name: "Zeus-Kernel-Builder"
   timeout_in: 20m
   container:
       image: navin136/builder:latest
